<resources>
    <string name="app_name">Algoizer</string>

    <string name="splash_image">Splash Image</string>
    <string name="array_size">Array Size</string>
    <string name="node">Node</string>
    <string name="close">close</string>
    <string name="_1">1</string>
    <string name="value">Value</string>
    <string name="count">Count</string>
    <string name="average">Average</string>
    <string name="worst">Worst</string>
    <string name="time">Time :</string>
    <string name="space">Space :</string>
    <string name="stable">Stable :</string>
    <string name="no_of_comparisons">No. of Comparisons :</string>
    <string name="best">Best</string>
    <string name="info">Info</string>
    <string name="confirm_back">Confirm Back</string>
    <string name="do_you_want_to_go_back">Do you want to go back?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="_0">0</string>
    <string name="l">l</string>
    <string name="r">r</string>
    <string name="comma_separated_ve_elements">Comma separated +ve elements</string>
    <string name="enter_number">Enter number</string>
    <string name="insert">Insert</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="clear_tree">Clear Tree</string>
    <string name="example_1">Example 1</string>
    <string name="example_2">Example 2</string>
    <string name="example_3">Example 3</string>
    <string name="random">random</string>
    <string name="pre_order">Pre-order</string>
    <string name="in_order">In-order</string>
    <string name="post_order">Post-order</string>
    <string name="binary_search_tree">Binary Search Tree</string>
    <string name="avl_tree">AVL Tree</string>
    <string name="traversals">Traversals :</string>
    <string name="icon">Icon</string>
    <string name="about">About</string>
    <string name="themes">Themes</string>
    <string name="close_application">Close Application</string>
    <string name="help">Help</string>
    <string name="tree_edge">Tree</string>
    <string name="back_edge">Back</string>
    <string name="forward_edge">Forward</string>
    <string name="cross_edge">Cross</string>
    <string name="empty">Empty</string>
    <string name="front">Front</string>
    <string name="end">End</string>
    <string name="top">TOP</string>
    <string name="iiitd_logo">IIITD LOGO</string>
    <string name="the_team">The Team</string>
    <string name="graphic_design">Graphic Design</string>
    <string name="ui_design">UI Design</string>
    <string name="app_development">App Development</string>
    <string name="usability_testing">Usability Testing</string>
    <string name="advisor">Advisor</string>
    <string name="graph_animation">Graph Animation</string>
    <string name="graph">Graph</string>
    <string name="coordinates">Coordinates</string>
    <string name="grid">Grid</string>
    <string name="navigation_menu">Navigation Menu</string>
    <string name="dash">-</string>
    <string name="backward">Backward</string>
    <string name="forward">Forward</string>
    <string name="play_pause">Play/Pause</string>
    <string name="show_info">Show Info</string>
    <string name="error">Error</string>
    <string name="hide_show_controls">Hide/Show Controls</string>
    <string name="grid_toggle">Grid Toggle</string>
    <string name="controls_menu">Controls Menu</string>
    <string name="show_hide_code">Show/Hide Code</string>
    <string name="current_theme">Current Theme</string>
    <string name="blue_theme">Blue</string>
    <string name="purple_theme">Purple</string>
    <string name="green_theme">Green</string>
    <string name="orange_theme">Orange</string>
    <string name="brown_theme">Brown</string>
    <string name="pink_theme">Pink</string>
    <string name="bubble_sort">Bubble Sort</string>
    <string name="random_array">Random Array</string>
    <string name="custom_array">Custom Array</string>
    <string name="or">OR</string>
    <string name="generate">Generate</string>
    <string name="clear">Clear</string>
    <string name="insertion_sort">Insertion Sort</string>
    <string name="merge_sort">Merge Sort</string>
    <string name="middle">Middle</string>
    <string name="first">First</string>
    <string name="select_pivot">Select Pivot</string>
    <string name="quick_sort">Quick Sort</string>
    <string name="selection_sort">Selection Sort</string>
    <string name="graph_warning_string">changing these will clear current graph</string>
    <string name="small">Small Graph</string>
    <string name="large">Large Graph</string>
    <string name="unweighted">Unweighted</string>
    <string name="weighted">Weighted</string>
    <string name="undirected">Undirected</string>
    <string name="directed">Directed</string>
    <string name="clear_graph">Clear Graph</string>
    <string name="clear_animation">Clear Animation</string>
    <string name="example_4">Example 4</string>
    <string name="example_5">Example 5</string>
    <string name="example_6">Example 6</string>
    <string name="example_7">Example 7</string>
    <string name="example_8">Example 8</string>
    <string name="example_9">Example 9</string>
    <string name="custom_input">Custom Input</string>
    <string name="save">Save</string>
    <string name="paste">Paste</string>
    <string name="run_custom_input">Run Custom Input</string>
    <string name="open_graph">Open graph</string>
    <string name="copy_graph">Copy Graph</string>
    <string name="clear_custom_input">Clear Custom Input</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="confirm">Confirm</string>
    <string name="edge_weight">Edge Weight</string>
    <string name="view">View</string>
    <string name="vertex">Vertex</string>
    <string name="edge">Edge</string>
    <string name="graph_s_custom_input_commands">Graph\'s Custom Input Commands</string>
    <string name="graph_notion">V = no. of vertices, E = no of edges</string>
    <string name="back">Back</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="replay">Replay</string>
    <string name="current">Current</string>
    <string name="graph_ds">Graph DS</string>
    <string name="graph_tree">Graph Tree</string>
    <string name="save_graph">Save Graph</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="enter_source_vertex">Enter Source Vertex</string>
    <string name="bfs">BFS</string>
    <string name="bfs_connected_components">BFS Connected Components</string>
    <string name="dfs">DFS</string>
    <string name="dfs_connected_components">DFS Connected Components</string>
    <string name="dijkstra">Dijkstra</string>
    <string name="bellmanford">BellmanFord</string>
    <string name="kruskal_s">Kruskal\'s</string>
    <string name="prim_s">Prim\'s</string>
    <string name="bst">BST</string>
    <string name="avl">AVL</string>
    <string name="algorithm">Algorithm</string>
    <string name="visualizer">Visualizer</string>
    <string name="dev_pd">Porvil</string>
    <string name="dev_za">Zubair Aslam</string>
    <string name="dev_sd">Syamantak Das</string>
    <string name="dev_db">Debajyoti Bera</string>
    <string name="dev_pd_email">porvil17304@iiitd.ac.in</string>
    <string name="dev_za_email">zubair17323@iiitd.ac.in</string>
    <string name="dev_sd_email">syamantak@iiitd.ac.in</string>
    <string name="dev_db_email">dbera@iiitd.ac.in</string>
</resources>