<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_closemenu"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_baseline_close_24" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/avl_tree"
            android:textColor="@color/mainColor"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/horizontalDiv7"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:scrollbarSize="5dp"
        android:scrollbarStyle="outsideInset"
        android:verticalScrollbarPosition="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:orientation="vertical"
            android:padding="10dp"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_insert"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_number"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <ImageButton
                    android:id="@+id/btn_insertrandom"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/random"
                    android:src="@drawable/ic_random_icon" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="?android:attr/listDivider" />

                <Button
                    android:id="@+id/btn_insert"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/insert"
                    android:textColor="@color/mainColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_number"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="?android:attr/listDivider" />

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/search"
                    android:textColor="@color/mainColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_delete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_number"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="?android:attr/listDivider" />

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/delete"
                    android:textColor="@color/mainColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_preorder"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/pre_order"
                    android:textColor="@color/mainColor" />

                <Button
                    android:id="@+id/btn_inorder"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/in_order"
                    android:textColor="@color/mainColor" />

                <Button
                    android:id="@+id/btn_postorder"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/post_order"
                    android:textColor="@color/mainColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_tree1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/example_1"
                    android:textColor="@color/mainColor" />

                <Button
                    android:id="@+id/btn_tree2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/example_2"
                    android:textColor="@color/mainColor" />

                <Button
                    android:id="@+id/btn_tree3"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:text="@string/example_3"
                    android:textColor="@color/mainColor" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_cleartree"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?android:selectableItemBackground"
                android:text="@string/clear_tree"
                android:textColor="@color/mainColor" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



