<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/tv_elementvalue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@drawable/roundedrect_sortingelement_normal"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_pointer"
            style="@style/S_TextView_Bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/l" />

        <TextView
            android:id="@+id/tv_pointer2"
            android:layout_width="0dp"
            style="@style/S_TextView_Bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/r" />

    </LinearLayout>

</LinearLayout>
