<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <TextView
        android:id="@+id/textView4"
        style="@style/S_TextView_Heading"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_closenav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_closenav"
        style="@style/S_ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontalDiv7"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:fadingEdgeLength="20dp"
        android:requiresFadingEdge="vertical"
        android:scrollbarSize="5dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbarThumbVertical="@drawable/scrollbar_gradient_vertical"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalDiv7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:orientation="vertical"
            android:padding="10dp"
            android:showDividers="middle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_home"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/iv_h"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/home"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_home" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/S_TextView_Bold"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/home"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_h"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_bst"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/iv_bst"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/bst"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/dsa_bst" />

                <TextView
                    style="@style/S_TextView_Bold"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/bst"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_bst"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_avl"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/iv_avl"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/avl"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/dsa_avl" />

                <TextView
                    style="@style/S_TextView_Bold"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/avl"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_avl"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>